--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,7 +9,7 @@
 
     <!-- Styles -->
 {% block style %}
-    <link href="{{ url_for('static', filename='css/style.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/style.min.css') }}?ver=1.0" rel="stylesheet">
 {% endblock %}
 
 
