--- a/main/templates/content.html
+++ b/main/templates/content.html
@@ -29,5 +29,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/calendarScript.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/calendarScript.min.js') }}?ver=1.0"></script>
 {% endblock %}
