Adjust the unavailable message
Update the message when show info is unavailable.

--- a/main/static/dev/handlebars/playlistCalendar.handlebars
+++ b/main/static/dev/handlebars/playlistCalendar.handlebars
@@ -55,7 +55,7 @@
             {{ else }}
                 {{# if future }}
                 {{ else }}
-                    <p>Playlist is unavailable for this program. <a href="{{ link }}">Contact the host</a> for playlist information</p>
+                    <p>Visit the <a href="{{ link }}">program website</a> for playlist information or to contact the show.</p>
                 {{/ if }}
             {{/ if }}
         </div>
